<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textColor="#2741D3"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/tx_subti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt_subtitulo"
        android:textColor="#2741D3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tx_titulo"
        app:layout_constraintTop_toBottomOf="@+id/tx_titulo" />

    <ImageButton
        android:id="@+id/imgfoto"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imgfot"
        android:onClick="AccesoCamara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        app:srcCompat="@drawable/icono_camara" />

    <ImageButton
        android:id="@+id/imglist"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imglista"
        android:onClick="AccesoLista"
        app:layout_constraintStart_toEndOf="@+id/imgfoto"
        app:layout_constraintTop_toTopOf="@+id/imgfoto"
        app:srcCompat="@drawable/icono_lista" />

    <ImageButton
        android:id="@+id/imgestadis"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imggrafico"
        android:onClick="AccesoGrafica"
        app:layout_constraintStart_toEndOf="@+id/imglist"
        app:layout_constraintTop_toTopOf="@+id/imglist"
        app:srcCompat="@drawable/iconso_estadisticas" />

    <TextView
        android:id="@+id/txop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="340dp"
        android:text="@string/txtop1"
        android:textColor="#2741D3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txtop2"
        android:textColor="#2741D3"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txop1"
        app:layout_constraintTop_toTopOf="@+id/txop1" />

    <TextView
        android:id="@+id/txop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/txtop3"
        android:textColor="#2741D3"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txop2"
        app:layout_constraintTop_toTopOf="@+id/txop2" />

</androidx.constraintlayout.widget.ConstraintLayout>